MODDICORE-356: Upgrade data-import-processing-core to Java 17 (#301)
* MODDICORE-356: Upgrade data-import-processing-core to Java 17
- migrate from Nashorn to GraalVM JS engine
- resolve code smell by returning an unmodifiable list where the list does not need to be mutable